--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="theme-base-08,layout-reverse">
+  <body class="layout-reverse">
 
     {% include sidebar.html %}
 
