--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,6 @@
 <div class="sidebar">
+  <div class="sidebar-photo" style="background-image: url("/mdw.jpg");"></div>
+  
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
