--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <div class="sidebar-photo" style="width: 400px; height: 400px; background-image: url("http://mdwelsh.github.io/mdw.jpg");"></div>
+  <div class="sidebar-photo"></div>
   
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
