--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,12 @@
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
+      <p class="sidebar-meta">
+      Google, Inc.<br>
+      601 N. 34th St.<br>
+      Seattle, WA 98103 (<a href="https://goo.gl/maps/7P7qk48WpgT2">map</a>)<br>
+      mdw AT mdw DOT la<br>
+      </p>
     </div>
 
     <nav class="sidebar-nav">
