--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -95,7 +95,7 @@ html {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background-image: url("/mdw-dinoshirt.jpg");
+  background-image: url("/mdw.jpg");
   margin: 0 auto;
 }
 
