--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,9 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       <p class="sidebar-meta">
-      Google, Inc.<br>
-      601 N. 34th St.<br>
-      Seattle, WA 98103 (<a href="https://goo.gl/maps/7P7qk48WpgT2">map</a>)<br>
+      XNOR.ai<br>
+      936 N 34th St. #400<br>
+      Seattle, WA 98103 (<a href="https://goo.gl/maps/yKB5oPLr3FH2">map</a>)<br>
       mdw AT mdw DOT la<br>
       </p>
     </div>
