--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       <p class="sidebar-meta">
-      XNOR.ai<br>
+      Xnor.ai<br>
       936 N 34th St. #400<br>
       Seattle, WA 98103 (<a href="https://goo.gl/maps/yKB5oPLr3FH2">map</a>)<br>
       mdw AT mdw DOT la<br>
