--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,9 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       <p class="sidebar-meta">
-      Xnor.ai<br>
-      936 N 34th St. #400<br>
-      Seattle, WA 98103 (<a href="https://goo.gl/maps/yKB5oPLr3FH2">map</a>)<br>
+      Apple, Inc.<br>
+      Two Union Square, 601 Union St, Suite 4400<br>
+      Seattle, WA 98101 (<a href="https://goo.gl/maps/dbR2vZJQXQw9d7yt6">map</a>)<br>
       mdw AT mdw DOT la<br>
       </p>
     </div>
