--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,8 @@
       <p class="lead">{{ site.description }}</p>
       <p class="sidebar-meta">
       Apple, Inc.<br>
-      Two Union Square, 601 Union St, Suite 4400<br>
+      Two Union Square<br>
+      601 Union St, Suite 4400<br>
       Seattle, WA 98101 (<a href="https://goo.gl/maps/dbR2vZJQXQw9d7yt6">map</a>)<br>
       mdw AT mdw DOT la<br>
       </p>
