Working on update.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://mdwdotla.medium.com/">Blog</a>
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://www.mdw.la/mattwelsh-cv.pdf">CV</a>
   </nav>
   </div>
 </div>
