--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,7 @@
         {% endif %}
       {% endfor %}
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://mdwdotla.medium.com/">Blog</a>
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://www.linkedin.com/in/welsh-matt/">LinkedIn</a>
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://www.mdw.la/mattwelsh-cv.pdf">CV</a>
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="https://www.mdw.la/mattwelsh-resume.pdf">Résumé</a>
   </nav>
