--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <a href="/mdw-dinoshirt.jpg"><div class="sidebar-photo"></div></a>
+  <a href="/mdw-yellow.jpg"><div class="sidebar-photo"></div></a>
   
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
