--- a/astro/src/layouts/PostDetails.astro
+++ b/astro/src/layouts/PostDetails.astro
@@ -10,7 +10,7 @@ import ShareLinks from "@components/ShareLinks.astro";
 import { SITE } from "@config";
 
 export interface Props {
-  post: CollectionEntry<"blog">;
+  post: CollectionEntry<"pages">;
 }
 
 const { post } = Astro.props;
