--- a/astro/src/layouts/TagPosts.astro
+++ b/astro/src/layouts/TagPosts.astro
@@ -11,7 +11,7 @@ import { SITE } from "@config";
 export interface Props {
   currentPage: number;
   totalPages: number;
-  paginatedPosts: CollectionEntry<"blog">[];
+  paginatedPosts: CollectionEntry<"pages">[];
   tag: string;
   tagName: string;
 }
