--- a/astro/src/pages/tags/[tag]/[page].astro
+++ b/astro/src/pages/tags/[tag]/[page].astro
@@ -7,13 +7,13 @@ import getPageNumbers from "@utils/getPageNumbers";
 import getPagination from "@utils/getPagination";
 
 export interface Props {
-  post: CollectionEntry<"blog">;
+  post: CollectionEntry<"pages">;
   tag: string;
   tagName: string;
 }
 
 export async function getStaticPaths() {
-  const posts = await getCollection("blog");
+  const posts = await getCollection("pages");
 
   const tags = getUniqueTags(posts);
 
@@ -31,7 +31,7 @@ export async function getStaticPaths() {
 const { page } = Astro.params;
 const { tag, tagName } = Astro.props;
 
-const posts = await getCollection("blog", ({ data }) => !data.draft);
+const posts = await getCollection("pages", ({ data }) => !data.draft);
 
 const postsByTag = getPostsByTag(posts, tag);
 
